--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "webpack-test",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack",
-    "start": "webpack serve --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "css-loader": "^6.7.2",
-    "sass": "^1.56.2",
-    "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
-  },
-  "dependencies": {
-    "lodash": "^4.17.21"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/0red0/Gumballino.git"
-  },
-  "bugs": {
-    "url": "https://github.com/0red0/Gumballino/issues"
-  },
-  "homepage": "https://github.com/0red0/Gumballino#readme",
-  "description": ""
+   "name": "webpack-test",
+   "version": "1.0.0",
+   "main": "index.js",
+   "scripts": {
+      "build": "webpack",
+      "start": "webpack serve --open",
+      "deploy": "gh-pages -d dist",
+      "test": "echo \"Error: no test specified\" && exit 1"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "MIT",
+   "devDependencies": {
+      "css-loader": "^6.7.2",
+      "gh-pages": "^4.0.0",
+      "html-webpack-plugin": "^5.5.0",
+      "sass": "^1.56.2",
+      "sass-loader": "^13.2.0",
+      "style-loader": "^3.3.1",
+      "webpack": "^5.75.0",
+      "webpack-cli": "^5.0.1",
+      "webpack-dev-server": "^4.11.1"
+   },
+   "dependencies": {
+      "lodash": "^4.17.21"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/0red0/Gumballino.git"
+   },
+   "bugs": {
+      "url": "https://github.com/0red0/Gumballino/issues"
+   },
+   "homepage": "https://github.com/0red0/Gumballino#readme",
+   "description": ""
 }
